; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_regexp.c_re_hex.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_regexp.c_re_hex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @re_hex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @re_hex(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp sge i32 %6, 48
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = icmp sle i32 %9, 57
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i32, i32* %4, align 4
  %13 = sub nsw i32 %12, 48
  store i32 %13, i32* %4, align 4
  br label %35

14:                                               ; preds = %8, %2
  %15 = load i32, i32* %4, align 4
  %16 = icmp sge i32 %15, 97
  br i1 %16, label %17, label %23

17:                                               ; preds = %14
  %18 = load i32, i32* %4, align 4
  %19 = icmp sle i32 %18, 102
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32, i32* %4, align 4
  %22 = sub nsw i32 %21, 87
  store i32 %22, i32* %4, align 4
  br label %34

23:                                               ; preds = %17, %14
  %24 = load i32, i32* %4, align 4
  %25 = icmp sge i32 %24, 65
  br i1 %25, label %26, label %32

26:                                               ; preds = %23
  %27 = load i32, i32* %4, align 4
  %28 = icmp sle i32 %27, 70
  br i1 %28, label %29, label %32

29:                                               ; preds = %26
  %30 = load i32, i32* %4, align 4
  %31 = sub nsw i32 %30, 55
  store i32 %31, i32* %4, align 4
  br label %33

32:                                               ; preds = %26, %23
  store i32 0, i32* %3, align 4
  br label %43

33:                                               ; preds = %29
  br label %34

34:                                               ; preds = %33, %20
  br label %35

35:                                               ; preds = %34, %11
  %36 = load i32*, i32** %5, align 8
  %37 = load i32, i32* %36, align 4
  %38 = mul nsw i32 %37, 16
  %39 = load i32, i32* %4, align 4
  %40 = and i32 %39, 255
  %41 = add nsw i32 %38, %40
  %42 = load i32*, i32** %5, align 8
  store i32 %41, i32* %42, align 4
  store i32 1, i32* %3, align 4
  br label %43

43:                                               ; preds = %35, %32
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
